refactor(backend): removes chart and point, use grafana instead
