# internal/backend/handlers.go
@@ -1,10 +1,7 @@
 package backend
 
 import (
-	"fmt"
-	"html/template"
 	"net/http"
-	"time"
 
 	openapi_types "github.com/oapi-codegen/runtime/types"
 )
@@ -50,36 +47,6 @@ func (s *Server) ListWithdrawFlows(w http.ResponseWriter, r *http.Request, param
 			Offset: httpFilter.Offset,
 		},
 	})
-}
-
-func (s *Server) RenderChartPage(w http.ResponseWriter, r *http.Request) {
-	points, err := s.repo.ListDailyFlowPoints(r.Context())
-	if err != nil {
-		http.Error(w, fmt.Sprintf("query chart data: %v", err), http.StatusInternalServerError)
-		return
-	}
-
-	requestedSvg, err := buildRequestedChartSVG(points)
-	if err != nil {
-		http.Error(w, fmt.Sprintf("render chart: %v", err), http.StatusInternalServerError)
-		return
-	}
-	withdrawnSvg, err := buildWithdrawnChartSVG(points)
-	if err != nil {
-		http.Error(w, fmt.Sprintf("render chart: %v", err), http.StatusInternalServerError)
-		return
-	}
-	requestCountSvg, err := buildRequestCountChartSVG(points)
-	if err != nil {
-		http.Error(w, fmt.Sprintf("render chart: %v", err), http.StatusInternalServerError)
-		return
-	}
-
-	w.Header().Set("Content-Type", "text/html; charset=utf-8")
-	if err := chartPageTpl.Execute(w, chartPageData{RenderedAt: time.Now(), RequestedSVG: template.HTML(requestedSvg), WithdrawnSVG: template.HTML(withdrawnSvg), RequestCountSVG: template.HTML(requestCountSvg)}); err != nil {
-		http.Error(w, fmt.Sprintf("render page: %v", err), http.StatusInternalServerError)
-		return
-	}
 }
 
 func (s *Server) ListDailySeriesData(w http.ResponseWriter, r *http.Request) {
